--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
 .container {
-  max-width: 80%;
+  max-width: 45%;
   margin-inline: auto;
-  margin-block-start: 5%;
+  margin-block-start: 15%;
+  text-align: center;
+
+  &>* {
+    margin-block-start: 16px;
+  }
 }
